# ALEX-Capstone-2024

./: .flake8  .gitignore  README.md  data.csv  digtwinopen.sh  digtwinrun.sh  env.sh  increasing_rightknee  jerk_motor.csv  lower_motor_pi_8.csv  mypy.ini  name  outputtest.csv  separator.py  server.js  test.txt  using-github.md  voltagelimitnote.txt
config/: controller.yaml  exo.json  exo_controller.yaml  motor_controller.yaml  rviz.rviz  simple_controller.yaml  twin_controller.yaml  twinmotor.json  twinmotor.txt
launch/: data.csv  exo.launch.py  gazebo.launch.py  launch.py  model.launch.py  motor.launch.py  twinmotor.launch.py
matlab/: bode_comparison.m  bode_from_chirp.m  calculateJ.m  cascademodel.slxc  chirp.asv  chirp.m  chirp_identification.asv  chirp_identification.m  chirptest.asv  chirptest.m  closest_match.m  current_frequencies.m  current_ref_actual_relationship.m  current_velocity_model.asv  current_velocity_model.m  current_velocity_model_from_current.asv  current_velocity_model_from_current.m  current_velocity_model_from_velocity.m  current_velocity_tf.asv  current_velocity_tf.m  currentvelocity.slxc  damping_from_steps.m  first_order.asv  first_order.m  frequency_plot.m  friction_from_steps.m  friction_model.slx  friction_model.slxc  modelsetup.m  motor_1_testing.slxc  params_from_chirp.m  plot_simultaneous_steps.m  preprocess_steps.m  sampled_fft.m  steps.m  test.m  tf_validation.m  (+1 more)
physical_motor/: 2808note.txt  (+62 more)
src/alex_nodes_cpp/: CMakeLists.txt  package.xml
src/alex_nodes_cpp/src/: encoder_reader.cpp  simple_publisher.cpp  simple_subscriber.cpp
(+289 files in other folders)
